# todo-cli

./: README.md  run.sh
blogs/: 01_Calling_python_from_rust.md  02_calling_python_from_rust_with_args.md
python/: pyproject.toml
python/src/todo/: main.py
rust/: Cargo.toml
rust/src/: main.rs
todo-cli/src/todo_cli/: main.py
